# Simple-CPU-Simulator

./: README.md  addi.h  cpu.cpp  exit.cpp  exit.h  factory.cpp  instruction.cpp  print.cpp  print.h  runner.cpp  runner.h
CPU_simulator/: CMakeLists.txt  add.cpp  add.h  addi.cpp  addi.h  cpu.cpp  cpu.h  exception.cpp  exception.h  exit.cpp  exit.h  factory.cpp  factory.h  instruction.cpp  instruction.h  instructions.txt  jump.cpp  jump.h  main.cpp  memory.cpp  memory.h  print.cpp  print.h  ram.cpp  ram.h  rom.cpp  rom.h  runner.cpp  runner.h  set.cpp  set.h
